app1/namespace.app1.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/description: ""
    openshift.io/display-name: ""
    openshift.io/requester: "jjj"
  labels:
    kubernetes.io/metadata.name: fifty
  name: fifty
