app1/service.app1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app1
  name: app1
  namespace: fifty
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: app1
  type: ClusterIP
