app1/route.app1.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: app1
  name: app1
  namespace: fifty
spec:
  port:
    targetPort: 8080-8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: app1
    weight: 100
  wildcardPolicy: None
